--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="https://plc.auction/fav/favicon-16x16.png">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <meta name="google-site-verification" content="ZpCI_fkP53_8sfDruhDhczeT_czpZo9yhjWxtc7I-QA" />
 </head>
 <body class="mat-typography">
   <app-root></app-root>
