--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>PLC-auction</title>
@@ -9,8 +10,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <meta name="google-site-verification" content="ZpCI_fkP53_8sfDruhDhczeT_czpZo9yhjWxtc7I-QA" />
+  <meta name="googlebot" content="all">
 </head>
+
 <body class="mat-typography">
   <app-root></app-root>
 </body>
+
 </html>
